@@ -35,6 +35,17 @@
 #ifndef INFINIBAND_ARCH_H
 #define INFINIBAND_ARCH_H
 
+#include <endian.h>
+#include <byteswap.h>
+
+#if __BYTE_ORDER == __LITTLE_ENDIAN
+static inline uint64_t htonll(uint64_t x) { return bswap_64(x); }
+static inline uint64_t ntohll(uint64_t x) { return bswap_64(x); }
+#elif __BYTE_ORDER == __BIG_ENDIAN
+static inline uint64_t htonll(uint64_t x) { return x; }
+static inline uint64_t ntohll(uint64_t x) { return x; }
+#endif
+
 /*
  * Architecture-specific defines.  Currently, an architecture is
  * required to implement the following operations:
